<resources>
    <string name="app_name">FITBoard</string>
    <string name="app_in_name">FITBoard</string>
    <string name="app_name_after">Register App</string>
    <string name="text_bottom">Войдите в свою учетную запись</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="logo_text">Weather</string>
    <string name="logo_hint">Enter city</string>
    <string name="logo_btn">Weather of the Entered City</string>
    <string name="no_logo_input">Enter text</string>
    <string name="hint_name_event">Название мероприятия</string>
    <string name="hint_place_event">Где проходит</string>
    <string name="hint_time_event">Время</string>
    <string name="hint_date_event">ГГГГММДД</string>
    <string name="hint_description_event">Описание мероприятия</string>
    <string name="btn_choose_time">Выбрать время</string>
    <string name="btn_add_event">Добавить</string>
    <string name="btn_my_event">Мои события</string>
</resources>