<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_event" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/place_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_place_event" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:focusable="false"
            android:hint="@string/hint_time_event" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/currentDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date_event"

            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:mask="####-##-##" />


       <!-- <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:focusable="false"
            android:hint="Дата" />
            -->
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/hint_description_event" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/but"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#BD3B3B"
        android:text="@string/btn_add_event">

    </Button>

    <Button
        android:id="@+id/but_time"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#BD3B3B"
        android:text="@string/btn_choose_time"
        >

    </Button>




</LinearLayout>