<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo_text"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/user_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/logo"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="25dp"
        android:inputType="textPersonName"
        android:hint="@string/logo_hint" />
    <Button
        android:id="@+id/logo_btn"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/user_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo_btn"/>

    <TextView
        android:id="@+id/result_info"
        android:layout_below="@id/logo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

</RelativeLayout>